<resources>
    <string name="app_name">地质编录仪</string>
    <string name="welcome">开机欢迎界面</string>
    <string name="DEVICE_CONNECTING">1</string> <!--有设备正在连接热点-->
    <string name="DEVICE_CONNECTED">2</string>  <!--有设备连上热点-->
    <string name="SEND_MSG_SUCCSEE">3</string>  <!--发送消息成功-->
    <string name="SEND_MSG_ERROR">4</string>    <!--发送消息失败-->
    <string name="GET_MSG">6</string>      <!--获取新消息-->

    <string name="send_data">发送数据</string>
    <string name="search">搜索WIFI</string>
    <string name="Photograph">拍照</string>
    <string name="Photograph_cut">拍照+裁切</string>
    <string name="Record_video">录视频</string>
    <string name="Save"> 保 存 </string>
    <string name="Select_data_ategory">选择数据类别</string>
    <string name="Select_time_node">选择时间节点</string>
    <string name="examine">查看</string>
    <string name="Occurrence_survey">直接产状测量:</string>
    <string name="Simple_measurement">简易测量</string>
    <string name="Ordinary_measurement">交汇测量</string>
    <string name="Sorting">排序:</string>
    <string name="Number_of_files">文件数:</string>
    <string name="size">大小:</string>
    <string name="Path">路径</string>
    <string name="Cancel">取消</string>
    <string name="Copy">复制</string>
    <string name="shear">剪切</string>
    <string name="delete">删除</string>
    <string name="Select_all">全选</string>
    <string name="Paste">粘贴</string>
    <string name="Load_more">加载更多......</string>
    <string name="Doesnot_include_instrument_length">不含仪器长度</string>
    <string name="include_instrument_length">含仪器长度</string>
    <string name="reset"> 重 置 </string>
    <string name="lock">有 效</string>
    <string name="Cruise">游轮</string>
    <string name="Name">名称</string>
    <string name="Time">时间</string>
    <string name="Straight_line_ranging">直线测距</string>
    <string name="Two_point_ranging">两点测距</string>
    <string name="Section_ranging">断面测距</string>
    <string name="Please_enter_a_file_name">请输入文件名</string>
    <string name="Compass_advanced_settings">罗盘设置</string>
    <string name="The_geomagnetic_judgment_threshold_setting">地磁异常初始值</string>
    <string name="threshold">初始值</string>
    <string name="Magnetic_declination_setting">磁偏角设置</string>
    <string name="Confirm_settings">确认</string>
    <string name="EXIT">退 出</string>
    <string name="SETING">设 置</string>
    <string name="camera">照 相 机</string>
    <string name="Laser_ranging">激光测距</string>
    <string name="File_management">文件管理</string>
    <string name="geological_record">地质编录</string>
    <string name="View_data">数据查看</string>
    <string name="Compass_settings">罗盘设置</string>
    <string name="Point_laser">点激光</string>
    <string name="Line_laser">线激光</string>
    <string name="Measured_quantity">测 量</string>
    <string name="Re_measurement">重新测量</string>
    <string name="Lock_the_left_visual_occurrence">锁定左侧视产状</string>
    <string name="vertical">垂直</string>
    <string name="horizontal">水平</string>
    <string name="dynamic_permissions">动态权限</string>
    <string name="str_dialog_body">电量</string>
    <string name="str_dialog_title">电量显示</string>
</resources>
