<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="5dp"
        tools:ignore="MissingDefaultResource">

    <LinearLayout
            android:id="@+id/infobar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#f0f0f0"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="5dp">
        <!-- 用来扩大排序点击的父容器:box -->
        <LinearLayout
                android:id="@+id/sort_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:onClick="clickImg">

            <TextView
                    android:id="@+id/sort"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Sorting"

                    android:textColor="#999"
                    android:textSize="18sp" />

            <ImageView
                    android:id="@+id/iv_asc"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:onClick="clickImg"
                    android:src="@drawable/top_icon" />
        </LinearLayout>

        <TextView
                android:id="@+id/count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/Number_of_files"
                android:textColor="#999"
                android:textSize="18sp" />

        <TextView
                android:id="@+id/size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/size"
                android:textColor="#999"
                android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
            android:id="@+id/topbar1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/infobar"
            android:orientation="horizontal"
            android:padding="5dp">

        <TextView
                android:id="@+id/path"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="start"
                android:singleLine="true"
                android:text="@string/Path" />

    </LinearLayout>

    <ListView
            android:id="@+id/list"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@+id/topbar1"
            android:layout_weight="1"
            android:background="#f0f0f0"
            android:cacheColorHint="#00000000" />

    <RelativeLayout
            android:id="@+id/bottom"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:background="#3814e3ea"
            android:visibility="visible">


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal">


            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:onClick="selectNone"
                    android:orientation="vertical">

                <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/fanxuan" />

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Cancel"
                        android:textColor="#d940a79d" />

            </LinearLayout>


            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:onClick="cope"
                    android:orientation="vertical">

                <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/copys" />

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Copy"
                        android:textColor="#d940a79d" />

            </LinearLayout>


            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:onClick="pathDelete"
                    android:orientation="vertical">

                <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/jianqie" />

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/shear"
                        android:textColor="#d940a79d" />

            </LinearLayout>


            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:onClick="delete"
                    android:orientation="vertical">

                <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/deleted" />

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/delete"
                        android:textColor="#d940a79d" />

            </LinearLayout>


            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:onClick="selectAll"
                    android:orientation="vertical">

                <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/selected_all" />

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Select_all"
                        android:textColor="#d940a79d" />

            </LinearLayout>

            <LinearLayout
                    android:id="@+id/pathclick"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:onClick="path"
                    android:orientation="vertical">

                <ImageView
                        android:id="@+id/imgpath"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/zhantie" />

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Paste"
                        android:textColor="#d940a79d" />
            </LinearLayout>


        </LinearLayout>


    </RelativeLayout>
</LinearLayout>