<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/laser_brackground"
        android:gravity="center">

    <LinearLayout
            android:layout_width="350dp"
            android:layout_height="500dp"
            android:background="@drawable/laser_brackground"
            android:orientation="vertical">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="80dp"
                android:text="@string/Compass_advanced_settings"
                android:textColor="@color/white"
                android:textSize="35sp" />

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="15dp"
                    android:text="@string/The_geomagnetic_judgment_threshold_setting"
                    android:textColor="@color/white"
                    android:textSize="25dp" />

            <EditText
                    android:id="@+id/threshold"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/edit_bg"
                    android:hint="@string/threshold"
                    android:maxLength="7"
                    android:textSize="25dp" />
        </LinearLayout>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="15dp"
                    android:text="@string/Magnetic_declination_setting"
                    android:textColor="@color/white"
                    android:textSize="25dp" />

            <EditText
                    android:id="@+id/declination"
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/edit_bg"
                    android:gravity="center"
                    android:hint="2.38"
                    android:maxLength="12"
                    android:textSize="23dp" />
            <Button
                    android:id="@+id/getData"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:textSize="18sp"
                    android:layout_marginLeft="20dp"
                    android:text="获取值"/>

        </LinearLayout>
<!--        <LinearLayout-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginLeft="90dp">-->

<!--            <Spinner-->
<!--                    android:id="@+id/placeName"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="60dp"-->
<!--                    android:layout_centerHorizontal="true"-->
<!--                   />-->
<!--            <Spinner-->
<!--                    android:id="@+id/place"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="60dp"-->
<!--                    android:layout_marginLeft="-20dp"-->
<!--                    android:gravity="center"/>-->
<!--        </LinearLayout>-->

        <Button
                android:id="@+id/Confirm_settings"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp"
                android:background="@drawable/border_line_while"
                android:text="@string/Confirm_settings"
                android:textColor="@color/white"
                android:textSize="25dp" />

        <Button
                android:id="@+id/retreat"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="25dp"
                android:background="@drawable/border_line_while"
                android:text="@string/EXIT"
                android:textColor="@color/white"
                android:textSize="25dp" />
    </LinearLayout>
</LinearLayout>
