<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/laser_brackground"
        android:orientation="vertical">

    <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:scrollbars="none">

        <LinearLayout
                android:id="@+id/ranging_method"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/black"
                android:orientation="horizontal">

            <TextView
                    android:id="@+id/line_ranging"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/boderwhite"
                    android:clickable="true"
                    android:gravity="center"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/Straight_line_ranging"
                    android:textColor="@color/red"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            <TextView
                    android:id="@+id/twopoint_ranging"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/boderwhite"
                    android:clickable="true"
                    android:gravity="center"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/Two_point_ranging"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />


            <TextView
                    android:id="@+id/section_ranging"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/boderwhite"
                    android:clickable="true"
                    android:gravity="center"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/Section_ranging"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            <TextView
                    android:id="@+id/Continuous_ranging"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/boderwhite"
                    android:clickable="true"
                    android:gravity="center"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="连续测距"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            <TextView
                    android:id="@+id/Accumulative_ranging"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/boderwhite"
                    android:clickable="true"
                    android:gravity="center"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="累加测距"
                    android:textColor="@drawable/textcolor_selector"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            <TextView
                    android:id="@+id/Reduced_range_finding"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/boderwhite"
                    android:clickable="true"
                    android:gravity="center"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="累减测距"
                    android:textColor="@drawable/textcolor_selector"
                    android:textSize="20sp"
                    android:textStyle="bold" />

        </LinearLayout>
    </HorizontalScrollView>

    <FrameLayout
            android:id="@+id/measurement_options"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="13"></FrameLayout>
</LinearLayout>